--- a/index.html
+++ b/index.html
@@ -15,11 +15,12 @@
     />
     <meta
       property="og:url"
-      content="https://lalitshankarchowdhury.github.io/TheOdinProject"
+      content="https://lalitshankarchowdhury.github.io/TheOdinProject/"
     />
   </head>
   <body>
-    <h1>Welcome</h1>
+    <h2>WELCOME</h2>
+    <hr />
     <p>
       This website is a showcase of my projects made while completing
       <a
