Add Odin Recipes project landing page

--- a/index.html
+++ b/index.html
@@ -30,5 +30,11 @@
         >The Odin Project</a
       >.
     </p>
+    <ul>
+      <li>Foundations Course</li>
+      <ol>
+        <li><a href="odin-recipes/index.html">Odin Recipes</a></li>
+      </ol>
+    </ul>
   </body>
 </html>
