--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <ul>
       <li>Foundations Course</li>
       <ol>
-        <li><a href="odin-recipes/index.html">Odin Recipes</a></li>
+        <li><a href="odin-recipes/">Odin Recipes</a></li>
       </ol>
     </ul>
   </body>
