--- a/odin-recipes/index.html
+++ b/odin-recipes/index.html
@@ -10,10 +10,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta property="og:title" content="Odin Recipes" />
     <meta property="og:description" content="Project showcase: Odin Recipes" />
-    <!-- <meta
+    <meta
       property="og:url"
-      content="https://lalitshankarchowdhury.github.io/TheOdinProject/"
-    /> -->
+      content="https://lalitshankarchowdhury.github.io/TheOdinProject/odin-recipes/"
+    />
   </head>
   <body>
     <h1>Odin Recipes</h1>
