--- a/odin-recipes/index.html
+++ b/odin-recipes/index.html
@@ -17,5 +17,15 @@
   </head>
   <body>
     <h1>Odin Recipes</h1>
+    <h2>Welcome</h2>
+    <p>
+      Enjoy this small collection of delicious recipes that are simple to
+      prepare!
+    </p>
+    <ul>
+      <li>
+        <a href="recipes/cheesy_ramen_noodles.html">Cheesy Ramen Noodles</a>
+      </li>
+    </ul>
   </body>
 </html>
