Add recipe link

--- a/odin-recipes/index.html
+++ b/odin-recipes/index.html
@@ -26,6 +26,11 @@
       <li>
         <a href="recipes/cheesy_ramen_noodles.html">Cheesy Ramen Noodles</a>
       </li>
+      <li>
+        <a href="recipes/simple_strawberry_syrup.html"
+          >Simple Strawberry Syrup</a
+        >
+      </li>
     </ul>
   </body>
 </html>
