Add Simple Pasta Salad recipe

--- a/odin-recipes/index.html
+++ b/odin-recipes/index.html
@@ -30,6 +30,9 @@
           >Simple Strawberry Syrup</a
         >
       </li>
+      <li>
+        <a href="recipes/simple_pasta_salad.html">Simple Pasta Salad</a>
+      </li>
     </ul>
   </body>
 </html>
