--- a/odin-recipes/recipes/simple_strawberry_syrup.html
+++ b/odin-recipes/recipes/simple_strawberry_syrup.html
@@ -25,10 +25,9 @@
       alt="Cheesy Ramen Noodles"
     />
     <p>
-      Use this strawberry syrup to make natural-flavored beverages. My nephew
-      loves strawberry milk. This simple recipe came from an attempt to create a
-      more natural substitute for the strawberry syrup sold in stores. I even
-      use it in my own beverages!
+      Use this strawberry syrup to make natural-flavored beverages. This simple
+      recipe came from an attempt to create a more natural substitute for the
+      strawberry syrup sold in stores. I even use it in my own beverages!
     </p>
     <h2>Ingredients</h2>
     <ul>
