Add link to go back to landing page

--- a/odin-recipes/recipes/simple_pasta_salad.html
+++ b/odin-recipes/recipes/simple_pasta_salad.html
@@ -52,5 +52,6 @@
       </li>
       <li>Cover, and refrigerate for at least 30 minutes before serving.</li>
     </ol>
+    <a href="../">Go back</a>
   </body>
 </html>
