--- a/odin-recipes/recipes/simple_strawberry_syrup.html
+++ b/odin-recipes/recipes/simple_strawberry_syrup.html
@@ -48,5 +48,6 @@
         is thick, about 10 minutes. Strain liquid into a bottle and refrigerate.
       </li>
     </ol>
+    <a href="../">Go back</a>
   </body>
 </html>
