--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
       property="og:url"
       content="https://lalitshankarchowdhury.github.io/TheOdinProject/"
     />
+    <meta
+      property="og:image"
+      content="https://www.theodinproject.com/assets/og-logo-022832d4cefeec1d5266237be260192f5980f9bcbf1c9ca151b358f0ce1fd2df.png"
+    />
   </head>
   <body>
     <h2>WELCOME</h2>
