Add image of chef cooking

--- a/odin-recipes/index.html
+++ b/odin-recipes/index.html
@@ -16,6 +16,11 @@
   </head>
   <body>
     <h1>Odin Recipes</h1>
+    <img
+      src="https://d3rf6j5nx5r04a.cloudfront.net/ewuuYKb4IxHEgUPiOAJwkUuDTiw=/760x558/product/9/0/6dea3e45f4004d26a303cb9f46db2109_opt.jpg"
+      width="400"
+      alt="Painting of chef cooking"
+    />
     <h2>Welcome</h2>
     <p>
       Enjoy this small collection of delicious recipes that are simple to
