Add OpenGraph social media preview image

--- a/odin-recipes/index.html
+++ b/odin-recipes/index.html
@@ -13,6 +13,10 @@
       property="og:url"
       content="https://lalitshankarchowdhury.github.io/TheOdinProject/odin-recipes/"
     />
+    <meta
+      property="og:image"
+      content="https://d3rf6j5nx5r04a.cloudfront.net/ewuuYKb4IxHEgUPiOAJwkUuDTiw=/760x558/product/9/0/6dea3e45f4004d26a303cb9f46db2109_opt.jpg"
+    />
   </head>
   <body>
     <h1>Odin Recipes</h1>
