Update OpenGraph title

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="author" content="Lalit Shankar Chowdhury" />
     <meta name="description" content="Project showcase: The Odin Project" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta property="og:title" content="Lalit Shankar Chowdhury" />
+    <meta property="og:title" content="The Odin Project" />
     <meta
       property="og:description"
       content="Project showcase: The Odin Project"
