--- a/index.html
+++ b/index.html
@@ -38,6 +38,9 @@
       <li>Foundations Course</li>
       <ol>
         <li><a href="odin-recipes/">Odin Recipes</a></li>
+        <li>
+          <a href="odin-recipes-styled/">Odin Recipes (with CSS styling)</a>
+        </li>
       </ol>
     </ul>
   </body>
