Revert image dimesions in recipe website

--- a/odin-recipes/recipes/simple_pasta_salad.html
+++ b/odin-recipes/recipes/simple_pasta_salad.html
@@ -25,7 +25,7 @@
     <h1>Simple Pasta Salad</h1>
     <img
       src="https://cdn.apartmenttherapy.info/image/upload/f_jpg,q_auto:eco,c_fill,g_auto,w_1500,ar_1:1/k%2Farchive%2Fbd5bbcce40edf5ea5bf0d8210b1c742db491c5e6"
-      width="400"
+      height="400"
       alt="Cheesy Ramen Noodles"
     />
     <p>
