--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@
         <li>
           <a href="odin-recipes-styled/">Odin Recipes (with CSS styling)</a>
         </li>
+        <li>
+          <a href="landing-page/">Landing page (for Inter font)</a>
+        </li>
       </ol>
     </ul>
   </body>
