Add banner and remove dead CSS

--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -29,7 +29,7 @@
             Inter is a typeface carefully crafted & designed for computer
             screens
           </div>
-          <div class="button">
+          <div class="rounded-rectangle">
             <a href="https://fonts.google.com/">Download</a>
           </div>
         </div>
@@ -84,8 +84,16 @@
     </div>
     <div class="action">
       <div class="block">
-        <div class="button">
-          <a href="https://fonts.google.com/">Download</a>
+        <div class="banner">
+          <div class="content">
+            <div class="action-main-text">Download Inter now</div>
+            <div class="action-secondary-text">
+              Licensed under the Open Font License
+            </div>
+          </div>
+          <div class="rounded-rectangle">
+            <a href="https://fonts.google.com/">Download</a>
+          </div>
         </div>
       </div>
     </div>
