Update style and add footer

--- a/landing-page-v2/index.html
+++ b/landing-page-v2/index.html
@@ -32,7 +32,9 @@
     </div>
     <div class="section practical">
       <div class="block">
-        <div class="sub-title">Practical and elegant</div>
+        <div class="sub-title">
+          Practical and <span class="elegant">elegant</span>
+        </div>
         <div class="text">
           Your go-to font for reports, signboards, and user-interfaces. Inter
           fits everywhere, emphasizing form <em>and</em> <u>function</u>.
@@ -58,6 +60,9 @@
           italics.
         </div>
       </div>
+    </div>
+    <div class="section footer">
+      <div class="block">Copyright © Lalit Shankar Chowdhury</div>
     </div>
   </body>
 </html>
