--- a/index.html
+++ b/index.html
@@ -44,6 +44,9 @@
         <li>
           <a href="landing-page/">Landing page (for Inter font)</a>
         </li>
+        <li>
+          <a href="landing-page-v2/">Landing page (for Inter font) v2</a>
+        </li>
       </ol>
     </ul>
   </body>
