--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     />
   </head>
   <body>
-    <h2>WELCOME</h2>
+    <h2>Welcome</h2>
     <hr />
     <p>
       This website is a showcase of my projects made while completing
