--- a/landing-page-v2/index.html
+++ b/landing-page-v2/index.html
@@ -66,8 +66,17 @@
           <span class="thick">Thick</span> and <span class="thin">thin</span>
         </div>
         <div class="text">
-          Inter comes with 9 weights, from 100 through 900, with support for
+          Inter comes in 9 weights, from 100 through 900, with support for
           italics.
+        </div>
+      </div>
+    </div>
+    <div class="section free">
+      <div class="block">
+        <div class="sub-title">Free, forever</div>
+        <div class="text">
+          Bundled with SIL Open Font Licence, you can use it in your products
+          without any legal concerns.
         </div>
       </div>
     </div>
